# db-ally

./: .bumpversion.cfg  .coveragerc  .dockerignore  .editorconfig  .flake8  .gitignore  .gitlab-ci.yml  .libraries-whitelist.txt  .license-whitelist.txt  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  LICENSE.md  MANIFEST.in  README.md  build_docs.sh  bump_version.sh  check_licenses.sh  mkdocs.yml  pyproject.toml  requirements-dev.txt  run_benchmark.sh  setup.cfg  setup.py  setup_dev_env.sh
.github/ISSUE_TEMPLATE/: 01_feature_request.yml  02_bug_report.yml  bug_report.yml  feature_request.yml
.github/scripts/: build_docs.sh
.github/workflows/: check_future_version.yml  ci.yml  documentation.yml  release.yml
.gitlab/ci/: terraform_apply.sh
benchmark/dbally_benchmark/: constants.py  context_benchmark.py  e2e_benchmark.py  evaluate.py  iql_benchmark.py  text2sql_benchmark.py  utils.py
benchmark/dbally_benchmark/dataset/: bird_dataset.py  context_dataset.json
benchmark/dbally_benchmark/experiment_config/: config.yaml
benchmark/dbally_benchmark/iql/: iql_result.py  metrics.py
benchmark/dbally_benchmark/text2sql/: metrics.py  prompt_template.py
benchmark/dbally_benchmark/views/: superhero.py
benchmark/tests/unit/: test_iql_metrics.py  test_method_call_visitor.py
benchmarks/: README.md
benchmarks/dbally_benchmark/: config.py  text2sql_benchmark.py
benchmarks/dbally_benchmark/text2sql/: text2sql_result.py
benchmarks/sql/: README.md  bench.py  config.py  constants.py  e2e_benchmark.py  evaluate.py  iql_benchmark.py  paths.py  pipeline.py  pipelines.py  results.py  saving.py  text2sql_benchmark.py
benchmarks/sql/bench/: evaluator.py  loaders.py  pipeline.py  utils.py
benchmarks/sql/config/: config.yaml
benchmarks/sql/data/: superhero.db
benchmarks/sql/dataset/: bird_dataset.py
benchmarks/sql/experiment_config/: config.yaml
benchmarks/sql/iql/: iql_result.py  metrics.py
benchmarks/sql/tests/: test_evaluator.py  test_metrics.py
benchmarks/sql/text2sql/: metrics.py
benchmarks/sql/views/: __init__.py  superhero.py
benchmarks/tests/unit/: test_main_evaluate.py
chroma/: chroma.sqlite3
data/: superhero.json
data/ak/add-local-llm/: coverage.xml
data/ak/api-reference-pt1/: coverage.xml
data/ak/finetuning-module/: coverage.xml
data/main/: coverage.xml
data/schemas/: superhero.sql
docker/benchmark/: Dockerfile
docker/precommit/: Dockerfile
docker/tests/: Dockerfile
docs/: code_documentation.md  conf.py  howtos.rst  index.md  index.rst  licenses.rst  project_overview.md  roadmap.md  tutorials.md
docs/about/: contact.md  contributing.md  roadmap.md
docs/api/: dbally.rst  modules.rst
docs/concepts/: collections.md  concept_1.md  freeform_views.md  iql.md  nl_responder.md  similarity_indexes.md  structured_views.md  views.md
docs/how-to/: create_custom_event_handler.md  custom_freeform_views.md  custom_llm.md  custom_views.md  custom_views_code.py  litellm.md  log_runs_to_langsmith.md  openai_assistants_integration.md  pandas_views.md  pandas_views_code.py  quickstart.md  quickstart2.md  quickstart2_code.py  quickstart_code.py  sql_views.md  trace_runs_with_otel.md  update_similarity_indexes.md  use_chromadb_store.md  use_custom_similarity_fetcher.md  use_custom_similarity_store.md  use_elastic_store.md  use_elastic_store_code.py  use_elastic_vector_store_code.py  use_elastics_vector_store_code.py  use_elasticsearch_store_code.py  visualize-collection.md  visualize_data.md  visualize_views.md  visualize_views_code.py
docs/howtos/: setup_dev_env.rst
docs/quickstart/: aggregations.md  candidates.db  index.md  multiple-views.md  quickstart.md  quickstart2.md  quickstart2_code.py  quickstart3.md  quickstart3_code.py  quickstart_code.py  semantic-similarity.md
docs/reference/: collection.md  data_models.md  event_handler.md  faiss_store.md  index.md  iql_generator.md  llm_client.md  llm_view_selector.md  nl_responder.md  openai_embedding_client.md  openai_llm_client.md  prompt.md  prompt_builder.md
docs/stylesheets/: extra.css
docs/tutorials/: LangGraphXdbally.ipynb  db-ally_tutorial.ipynb  dbally-assistants-api.ipynb  index.md  langgraphXdbally2.ipynb  langgraph_tools.py  tutorial_1.md
examples/: aggregations.py  config.py  db.py  freeform.py  intro.py  multiple_views.py  paths.py  recruiting.py  semantic_similarity.py  superhero_example.py  views.py  visualize_fallback_code.py  visualize_multicollections_code.py  visualize_views_code.py
examples/codebase_community/: community_users_view.py  multicollection.py
examples/recruiting/: candidate_view_with_similarity_store.py  candidates_freeform.py  cypher_text2sql_view.py  db.py  views.py
examples/recruting/: candidate_view_with_similarity_store.py  cypher_text2sql_view.py  db.py  views.py
extra/: README.md
extra/prompt_tuning/: README.md  evaluate.py  train.py
finetuning/: README.md
finetuning/dbally_finetuning/: constants.py  paths.py  prompt.py  train.py
infra/terraform/: main.tf  providers.tf  variables.tf
notebooks/: example.ipynb
similarity_indexes/: country_similarity.index
src/dbally/: __init__.py  __version__.py  _collection.py  _exceptions.py  _main.py  _types.py  collection.py  config.py  constants.py  context.py  example.py  exceptions.py  global_handlers.py  hello.py  index.py  multicollection.py  paths.py
src/dbally_benchmark/: config.py  constants.py  dataset.py  e2e_benchmark.py  evaluate.py  io.py  iql_benchmark.py  metrics.py  paths.py  text2sql_benchmark.py  utils.py
src/dbally_cli/: example1.py  example2.py  main.py  similarity.py  text2sql.py
src/dbally_codegen/: __init__.py  autodiscovery.py  generator.py
tests/: test_dbally.py  test_nl_responder.py  test_prompt_builder.py
tests/integration/: test_index_with_chroma.py  test_llm_options.py
tests/unit/: mocks.py  test_assistants_adapters.py  test_collection.py  test_fallback_collection.py  test_fewshot.py  test_index.py  test_iql_format.py  test_iql_generator.py  test_iql_parser.py  test_llm_options.py  test_nl_responder.py  test_prompt_builder.py  test_view_selector.py
(+422 files in other folders)
