[metadata]
name = dbally
# do not change version by hand: use bump_version.sh
version = file: src/dbally/VERSION
description = "deepsense.ai project"
author = deepsense.ai
author_email = contact@deepsense.ai
license = Other/Proprietary License
license_files = LICENSE.md
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Environment :: GPU :: NVIDIA CUDA
    Intended Audience :: Science/Research
    License :: Other/Proprietary License
    Natural Language :: English
    Operating System :: Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: AI
    Private :: Do Not Upload

[options]
package_dir =
    =src
packages = find:
zip_safe = False
platforms = any
include_package_data = True
python_requires = >=3.8
install_requires =
    pandas~=2.0.3
    python-dotenv>=0.5.1
    SQLAlchemy==2.0.25
    tabulate>=0.9.0
    transformers>=4.37.1
    click~=8.1.7

[options.extras_require]
openai =
    openai>=1.10.0
    tiktoken>=0.6.0
examples =
    pydantic~=2.6.0
    pydantic_settings~=2.1.0
    psycopg2-binary~=2.9.9
benchmark =
    asyncpg~=0.28.0
    eval-type-backport~=0.1.3
    hydra-core~=1.3.2
    loguru~=0.7.0
    neptune~=1.6.3
    pydantic~=2.6.1
    pydantic-core~=2.16.2
    pydantic-settings~=2.0.3
    psycopg2-binary~=2.9.9

[options.packages.find]
where = src

[bdist_wheel]
universal = 1

[aliases]
# Alias `setup.py test` to `setup.py pytest`
test = pytest

[options.entry_points]
console_scripts =
    dbally = dbally_cli.main:cli