[metadata]
name = dbally
# do not change version by hand, is will be automatically updated during the release action
version = attr: dbally.__version__.__version__
description = "Efficient, consistent and secure library for querying structured data with natural language"
long_description = file: README.md
long_description_content_type = text/markdown
author = deepsense.ai
author_email = contact@deepsense.ai
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
project_urls =
    Documentation = https://db-ally.deepsense.ai/
    Source = https://github.com/deepsense-ai/db-ally

[options]
package_dir =
    =src
packages = find:
zip_safe = False
platforms = any
include_package_data = True
python_requires = >=3.8
install_requires =
    pandas~=2.0.3
    python-dotenv>=0.5.1
    SQLAlchemy==2.0.25
    tabulate>=0.9.0
    click~=8.1.7
    numpy>=1.24.0
    opentelemetry-api>=1.0.0

[options.extras_require]
litellm =
    litellm>=1.37.9
faiss =
    faiss-cpu>=1.8.0
chromadb =
    chromadb~=0.4.24
    tenacity~=8.3.0
langsmith=
    langsmith~=0.1.57
examples =
    pydantic~=2.6.0
    pydantic_settings~=2.1.0
    psycopg2-binary~=2.9.9
benchmark =
    asyncpg~=0.28.0
    eval-type-backport~=0.1.3
    hydra-core~=1.3.2
    loguru~=0.7.0
    neptune~=1.6.3
    pydantic~=2.6.1
    pydantic-core~=2.16.2
    pydantic-settings~=2.0.3
    psycopg2-binary~=2.9.9
elasticsearch =
    elasticsearch~=8.13.1
gradio =
    gradio~=4.31.5
    gradio_client~=0.16.4
local =
    accelerate~=0.31.0
    torch~=2.2.1
    transformers~=4.41.2

[options.packages.find]
where = src

[bdist_wheel]
universal = 1

[aliases]
# Alias `setup.py test` to `setup.py pytest`
test = pytest

[options.entry_points]
console_scripts =
    dbally = dbally_cli.main:cli
